--- a/src/styles/globals.less
+++ b/src/styles/globals.less
@@ -63,6 +63,10 @@
   @apply text-2xl font-semibold text-light;
 }
 
+.dashboard-routes::-webkit-scrollbar {
+  width: 2px;
+}
+
 .tab_trigger {
   @apply border-b  border-b-white/20  data-[state=active]:border-light data-[state=active]:text-white;
 }
