removed id from searchparams

--- a/src/styles/globals.less
+++ b/src/styles/globals.less
@@ -67,6 +67,10 @@
   width: 2px;
 }
 
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
 .tab_trigger {
   @apply border-b  border-b-white/20  data-[state=active]:border-light data-[state=active]:text-white;
 }
